--- a/templates/landingPage.html
+++ b/templates/landingPage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head> <title>Landing Page</title>
+	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 	<link rel="stylesheet" href="../static/css/bootstrap.min.css">
 </head>
 <body>
@@ -17,13 +18,11 @@
 <div class="panel-heading"> <strong class="panel-title">Operations</strong> </div>
 <div class="panel-body">
 <form action="/landingpage" method="POST">
-	<table style="border-collapse:separate; border-spacing:20px 20px">
+	<table style="border-collapse:separate; border-spacing:20px 20px; table-layout:fixed; width:100%">
 	<tr> <td> <input type="submit" name="submit" class="btn btn-info btn-block" value="Add User" placeholder="Add User"/> </td>
 	<td> <input type="submit" name="submit" class="btn btn-warning btn-block" value="Remove User" placeholder="Remove User"/> </td> </tr>
-	<tr> <td> <input type="submit" name="submit" class="btn btn-success btn-block" value="Access Devices" placeholder="Access Devices"/> </td>
-	<td> <input type="submit" name="submit" class="btn btn-warning btn-block" value="Disconnect" placeholder="Access IoT Device"/> </td> </tr>
-	<tr></tr>
-	<tr> <td> <input type="submit" name="submit" class="btn btn-danger btn-block" value="Logout" placeholder="Logout"/> </td> </tr>
+	<tr> <td> <input type="submit" name="submit" class="btn btn-info btn-block" value="IoT Portal" placeholder="IoT Portal"/> </td>
+	<td> <input type="submit" name="submit" class="btn btn-danger btn-block" value="Logout" placeholder="Logout"/> </td> </tr>
 	</table>
 </form>
 </div>
