--- a/templates/userLogin.html
+++ b/templates/userLogin.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>User Login</title> 
+	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 	<link rel="stylesheet" href="../static/css/bootstrap.min.css">
 </head>
 <body>
@@ -21,7 +22,6 @@
 <div class="panel-heading"> <strong class="panel-title">Enter Credentials</strong> </div>
 <div class="panel-body">
 <form action="/login" method="POST">
-	{{ form.csrf }}
 	<table style="border-collapse:separate; border-spacing:20px 20px">
 	<tr> <td> <input type="username" name="username" placeholder="Username"/> </td>
 	<td> <input type="password" name="password" placeholder="Password"/> </td> </tr>
