--- a/templates/userRemove.html
+++ b/templates/userRemove.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head> <title>User Remove</title>
+	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 	<link rel="stylesheet" href="../static/css/bootstrap.min.css">
 </head>
 <body>
@@ -19,7 +20,6 @@
 <div class="panel-heading"> <strong class="panel-title">User Remove</strong> </div>
 <div class="panel-body">
 <form action="/userremove" method="post">
-	{{ form.csrf }} 
 	<table style="border-collapse:separate; border-spacing:20px 20px; table-layout:fixed; width:100%">
 	<tr>
 	{% for user in userlist %}
@@ -28,7 +28,8 @@
 			</tr>
 		{% endif %}
 	{% endfor %}
-	<tr> <td> <input type="submit" name="submit" class="btn btn-danger btn-block" value="Remove"/> </td> </tr>
+	<tr> <td> <input type="submit" name="submit" class="btn btn-danger btn-block" value="Remove"/> </td>
+	<td> <input type="submit" name="submit" class="btn btn-danger btn-block" value="Cancel"> </td> </tr>
 	</table>
 </form>
 </div>
