--- a/templates/userSignup.html
+++ b/templates/userSignup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head> <title>User Signup</title>
+	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 	<link rel="stylesheet" href="../static/css/bootstrap.min.css">
 </head>
 <body>
@@ -19,14 +20,16 @@
 <div class="panel-heading"> <strong class="panel-title">User Registration</strong> </div>
 <div class="panel-body">
 <form action="/signup" method="post">
-	{{ form.csrf }} 
 	<table style="border-collapse:separate; border-spacing:20px 20px">
-	<tr> <td> <input name="username_ui" placeholder="Username"/> </td> </tr>
+	<tr> <td> <input name="username_ui" placeholder="Username" value="{{ set_ui[0] }}"/> </td> </tr>
 	<tr> <td> <input type="password" name="password_ui" placeholder="Password"/> </td>
 	<td> <input type="password" name="cfpasswd_ui" placeholder="Confirm Password"/> </td> </tr>
-	<tr> <td> <input name="email_ui" placeholder="Email"/> </td>
-	<td> <input name="phone_ui" placeholder="Phone"/> </td> </tr>
-	<tr> <td> <input type="submit" name="submit" class="btn btn-success" value="Sign up"/> </td> </tr>
+	<tr> <td> <input name="email_ui" placeholder="Email" value="{{ set_ui[1] }}"/> </td>
+	<td> <input name="cfemail_ui" placeholder="Confirm Email" value="{{ set_ui[2] }}"> </td> </tr>
+	<tr> <td> <input name="phone_ui" placeholder="Phone" value="{{ set_ui[3] }}"/> </td>
+	<td> <input name="cfphone_ui" placeholder="Confirm Phone" value="{{ set_ui[4] }}"> </td> </tr>
+	<tr> <td> <input type="submit" name="submit" class="btn btn-success btn-block" value="Sign up"/> </td>
+	<td> <input type="submit" name="submit" class="btn btn-danger btn-block" value="Cancel"/> </td> </tr>
 	</table>
 </form>
 </div>
