--- a/templates/userVerify.html
+++ b/templates/userVerify.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head> <title>User Verify</title>
+	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 	<link rel="stylesheet" href="../static/css/bootstrap.min.css">
 </head>
 <body>
@@ -20,7 +21,6 @@
 <div class="panel-heading"> <strong class="panel-title">Enter OTP</strong> </div>
 <div class="panel-body">
 <form action="/verify" method="post">
-	{{ form.csrf }}
 	<table style="border-collapse:separate; border-spacing:20px 20px">
 	<tr> <td> <input name="otp_ui" placeholder="OTP"/> </td> </tr>
 	<tr> <td> <input type="submit" name="submit" class="btn btn-success btn-block" value="Verify"/> </td>
